# trading-board

./: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  logging.schema.json  pyproject.toml  pytest.ini  requirements.txt
.githooks/: commit-msg  post-commit  pre-commit
.github/workflows/: cd.yml  ci.yml
auth/: app.py  configuration.py  constants.py  models.py  security.py  server.py  service.py  session.py  storage.py
common/: __init__.py  logging.py
docker/init/: 01_market_data.sql  02_auth.sql
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx
market_data/: __init__.py  app.py  configuration.py  management_api.py  metadata.py  models.py  persistence.py  publisher.py  retry.py  runner.py  service.py
market_data/generators/: __init__.py  dealer_quotes.py  order_book.py
market_data/simulation/: __init__.py  base.py  equity.py  rates.py
scripts/: run_smoke.sh
tests/: auth_stubs.py  test_auth_api.py  test_auth_service.py  test_configuration.py  test_dealer_quote_generator.py  test_equity_simulator.py  test_logging.py  test_management_api.py  test_metadata_factories.py  test_models_contract.py  test_order_book_generator.py  test_persistence.py  test_publisher.py  test_rate_simulator.py  test_resilience.py  test_runner.py  test_service_integration.py  test_smoke_stack.py
tests/e2e/: test_full_stack.py
tests/trading/: in_memory.py  test_api_orders.py  test_config.py  test_domain_models.py  test_infrastructure.py  test_matching_engine.py  (+2 more)
trading/: app.py  config.py
(+25 files in other folders)
