[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-data-agent"
version = "0.1.0"
description = "Synthetic market data agent for the trading simulator platform."
authors = [{ name = "Trading Simulator Team" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "pydantic>=2.6.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "argon2-cffi>=23.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "httpx>=0.27.0",
]
